--- a/src/css/index.css
+++ b/src/css/index.css
@@ -5,15 +5,14 @@
     --background:#353535 ;
     --primary: #e0fbfc;
     --secondary: #284b63;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto', sans-serif !important;
 
   }
 
   #root{
     background: white !important;
-    overflow-x: hidden;
-    overflow-y: hidden;
     padding: 0;
+    overflow: hidden !important;
     margin: 0;
   }
 
@@ -27,7 +26,9 @@ body{
     margin: 0;
     padding: 0;
     width: 100%;
+    overflow-x: hidden !important;
     background: rgb(251,237,230);
+    font-family: 'Roboto', sans-serif !important;
 }
 
 p{
@@ -115,6 +116,7 @@ p{
   }
 
   .contact-me{
+    font-size: 15px !important;
     margin-bottom: 0 !important;
     border: 1px white solid;
     border-radius: 10px;
@@ -155,9 +157,12 @@ p{
 
   .home-text-width{
     width: 600px;
+
     color: white !important;
-    font-size: 14px;
+    font-size: 15px;
   }
+
+
 
   .carousel-h1{
     color: black !important;
@@ -206,14 +211,14 @@ p{
 
   .img{
     width: 300px !important;
-    height: 450px !important;
+    height: 350px !important;
   }
 
   .img-spc{
     transition: .5s;
     width: 300px !important;
-    padding-top: 105px;
-    padding-bottom: 105px;
+    padding-top: 55px;
+    padding-bottom: 55px;
     height: auto !important;
   }
 
@@ -221,7 +226,10 @@ p{
 
   .info-cta{
     height: 300px;
-    width: 300px;
+    width: 375px !important;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 
     border: 1px rgb(250, 198, 172) solid;
     box-shadow: 20px rgb(250, 198, 172);
@@ -238,6 +246,7 @@ p{
   .carousel-cta{
     border: 1px rgb(250, 178, 142) solid; 
     color: black !important;
+    margin-top: auto !important;
     padding: 7px 10px;
     border-radius: 16px;
     text-align: center;
@@ -320,8 +329,234 @@ p{
   margin: 0 25px;
 }
 
+.font-fm{
+  font-family: 'Roboto', sans-serif;
+}
+
 .footer-img-fb{
   height: 45px;
   width: 45px;
   margin: 0 25px;
+}
+
+.remis-height{
+  margin-bottom: 120px;
+  background: white
+}
+
+
+.story-cta{
+  border:  1px white solid;
+  padding: 8px 15px;
+  border-radius: 10px;
+  transition: .5s;
+}
+
+.story-cta:hover{
+  background: white;
+  box-shadow: 0 0 15px white;
+  color: black !important;
+  cursor: pointer;
+}
+
+
+
+.remis-text-border{
+  background: rgba(250, 198, 172, 0.555);
+  color: black !important;
+  border-radius: 10px;
+  height: 300px;
+  max-width: 90% !important;
+  margin-top: 20px !important;
+  padding:  40px 0px 10px 10px !important;
+}
+
+.remis-text{
+  font-size: 17px;
+}
+
+.remis-cta{
+  width: 200px;
+}
+
+.remis-container{
+  width: 80% !important;
+}
+
+.menu-height{
+  height: 40px;
+  margin-right: 30px;
+  margin-left: 10px;
+}
+
+.nav-link-mobile{
+  color: black;
+  position: relative !important;
+  transition: .5s;
+}
+
+.nav-link-mobile:hover{
+  cursor: pointer;
+}
+
+.nav-link-mobile:hover:after{
+  width: 50%;
+  background: rgb(250, 198, 172)  !important;
+  cursor: pointer;
+} 
+
+
+.nav-link-mobile:after {
+  position: absolute !important;
+  content: '';
+  height: 2px;
+    /* adjust this to move up and down. you may have to adjust the line height of the paragraph if you move it down a lot. */
+  bottom: -4px; 
+
+
+ /****** 
+ optional values below 
+ ******/
+  
+  /* center - (optional) use with adjusting width   */
+  margin: 0;
+    left: 0;
+  right: 0;
+  /* must be the same as nav-link padding-right otherwise it will not align */
+    width: 0%;
+    background: rgb(250, 198, 172)  !important;
+    
+    /* optional animation */
+    -o-transition:.5s;
+      -ms-transition:.5s;
+  -moz-transition:.5s;
+  -webkit-transition:.5s;
+  transition:.5s;
+}
+
+
+/* Position and sizing of burger button */
+.bm-burger-button {
+  position: fixed;
+  width: 35px;
+  height: 22px;
+  right: 28px;
+  top: 23px;
+}
+
+/* Color/shape of burger icon bars */
+.bm-burger-bars {
+  background: #ffffff;
+}
+
+/* Color/shape of burger icon bars on hover*/
+.bm-burger-bars-hover {
+  background: #ffffff;
+}
+
+/* Position and sizing of clickable cross button */
+.bm-cross-button {
+  height: 30px;
+  width: 30px;
+}
+
+/* Color/shape of close button cross */
+.bm-cross {
+  background: #bdc3c7;
+}
+
+/*
+Sidebar wrapper styles
+Note: Beware of modifying this element as it can break the animations - you should not need to touch it in most cases
+*/
+.bm-menu-wrap {
+  position: fixed;
+  height: 100%;
+  top: 0; 
+  /* added this line of code here potential break for animations!! */
+}
+
+/* General sidebar styles */
+.bm-menu {
+  background: #ffffff;
+  padding: 2.5em 1.5em 0;
+  font-size: 1.15em;
+}
+
+/* Morph shape necessary with bubble or elastic */
+.bm-morph-shape {
+  fill: #373a47;
+}
+
+/* Wrapper for item list */
+.bm-item-list {
+  color: #b8b7ad;
+  padding: 0.8em;
+}
+
+/* Individual item */
+.bm-item {
+  display: inline-block;
+}
+
+/* Styling of overlay */
+.bm-overlay {
+  background: rgba(0, 0, 0, 0.3);
+}
+
+
+
+
+
+
+
+
+
+
+
+@media screen and (max-width: 650px) {
+  .home-text-width{
+    width: 450px;
+    font-size: 13px;
+  }
+  .home-h1{
+    font-size: 35px;
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (max-width: 510px) {
+.home-text-width{
+  width: 325px;
+  font-size: 14px !important;
+}
+.home-h1{
+  font-size: 25px;
+  margin-bottom: 30px;
+}
+
+.home-cta{
+  font-size: 15px;
+}
+}
+
+
+@media screen and (max-width: 1120px) {
+  .info-cta{
+    margin-top: 30px !important;
+  }
+}
+
+@media screen and (max-width: 440px) {
+  .info-cta{
+    margin-top: 30px !important;
+  }
+  .remis-height{
+    margin-bottom: 75px;
+  }
+
+  .remis-text-border{
+    height: auto;
+    margin-top: 20px !important;
+  }
 }
