--- a/src/css/index.css
+++ b/src/css/index.css
@@ -9,6 +9,7 @@
 
   }
 
+
   #root{
     background: white !important;
     padding: 0;
@@ -56,6 +57,8 @@ p{
     margin-right: 15px;
     height: 65px !important;
   }
+
+
 
   .logo-name{
     color: white !important;
@@ -166,6 +169,45 @@ p{
     background-size: cover !important;
     margin: 0 !important;
     padding-right: 0 !important;
+    height:100vh !important;  /* responsive height */
+  }
+
+
+
+
+
+
+  
+.pb{
+
+    background-image: linear-gradient(rgba(70, 69, 69, 0.5), rgba(2, 2, 2, 0.295)), url("../images/puppybasics.jpg") !important;
+    background-repeat: no-repeat !important;
+    background-position: center !important;
+    background-size: cover !important;
+    padding-right: 0 !important;
+    margin: 0 !important;
+    width: 100vw !important;
+    height:100vh !important;  /* responsive height */
+}
+
+.padding-margin-0{
+  padding: 0 !important;
+  margin: 0 !important;
+  width: 100vw !important;
+}
+
+
+
+
+
+
+
+
+
+
+  .basics{
+    margin: 0 !important;
+    padding-right: 0 !important;
     width: 100vw !important;
     height:100vh !important;  /* responsive height */
   }
@@ -177,6 +219,13 @@ p{
 
   .home-text-width{
     width: 600px;
+    color: white !important;
+    font-size: 15px;
+  }
+
+
+  .pb-basics-text-width{
+    width: 800px;
 
     color: white !important;
     font-size: 15px;
@@ -195,6 +244,13 @@ p{
     color: white !important;
     font-size: 45px;
     margin-bottom: 30px;
+  }
+
+  .pb-h1{
+    color: white !important;
+    font-size: 50px;
+    margin-bottom: 30px;
+
   }
 
   .homeCarousel{
@@ -321,6 +377,48 @@ p{
 
 
 
+
+.pb-underline{
+  position: relative;
+}
+
+
+.pb-underline:after {
+  position: absolute;
+  content: '';
+  height: 2px;
+/* adjust this to move up and down. you may have to adjust the line height of the paragraph if you move it down a lot. */
+  bottom: -4px; 
+
+
+ /****** 
+ optional values below 
+ ******/
+  
+  /* center - (optional) use with adjusting width   */
+  margin: 0 auto;
+  padding: 0 !important;
+  left: 0px;
+  right: 0;
+  width: 200px;
+  background: rgb(250, 198, 172);
+
+/* optional animation */
+-o-transition:.5s;
+  -ms-transition:.5s;
+  -moz-transition:.5s;
+  -webkit-transition:.5s;
+  transition:.5s;
+}
+
+
+
+
+
+
+
+
+
 .info-cta-obedience{
   height: 350px;
   width: 300px;
@@ -339,7 +437,7 @@ p{
 
 .footer{
   height: 150px;
-
+  width: 100vw !important;
   background: rgba(250, 198, 172, 0.582);
 }
 
@@ -580,6 +678,27 @@ Note: Beware of modifying this element as it can break the animations - you shou
     margin-top: 20px !important;
   }
 }
+
+
+
+@media screen and (max-width: 440px) {
+  .img-height{
+    margin-left: 15px !important;
+    margin-right: 15px;
+    height: 65px !important;
+  }
+}
+
+.subheading-mobile{
+  font-size: 14px;
+}
+
+.basics-text-width{
+  width: 800px;
+    color: white !important;
+    font-size: 15px;
+}
+
 
 
 
