--- a/src/css/index.css
+++ b/src/css/index.css
@@ -321,9 +321,9 @@ p{
   
 .pb{
 
-    background-image: linear-gradient(rgba(70, 69, 69, 0.5), rgba(2, 2, 2, 0.295)), url("../images/puppybasics.jpg") !important;
-    background-repeat: no-repeat !important;
-    background-position: center !important;
+  background-image: linear-gradient(rgba(70, 69, 69, 0.5), rgba(2, 2, 2, 0.295)), url("../images/remis1.jpg") !important;
+  background-repeat: no-repeat !important;
+  background-position: center top 40%; 
     background-size: cover !important;
     padding-right: 0 !important;
     margin: 0 !important;
@@ -334,9 +334,9 @@ p{
 
 .ob{
 
-  background-image: linear-gradient(rgba(70, 69, 69, 0.5), rgba(2, 2, 2, 0.295)), url("../images/ob.jpg") !important;
+  background-image: linear-gradient(rgba(70, 69, 69, 0.5), rgba(2, 2, 2, 0.295)), url("../images/remis2.jpg") !important;
   background-repeat: no-repeat !important;
-  background-position: center !important;
+  background-position: center  !important; /* Adjust the value as needed */
   background-size: cover !important;
   padding-right: 0 !important;
   margin: 0 !important;
