fixed animation error

--- a/src/css/CompanyOfferingsPage.css
+++ b/src/css/CompanyOfferingsPage.css
@@ -67,3 +67,14 @@
     max-height: 100px;
   }
   
+  .list-item {
+    opacity: 0;
+    transform: translateY(20px);
+    transition: opacity 0.8s ease-out, transform 0.8s ease-out;
+  }
+  
+  .list-item.fade-in {
+    opacity: 1;
+    transform: translateY(0);
+  }
+  
